## Change entries
Added: For new features that have been added.
Changed: For changes in existing functionality.
Deprecated: For once-stable features removed in upcoming releases.
Removed: For features removed in this release.
Fixed: For any bug fixes.
Security: For vulnerabilities.

## [0.5.2] - ongoing
### Added
- input file conversion from pdf, docx, and html
### Fixed
- updated documentation to include input document conversion
- updated terminal init function to include input document conversion

## [0.5.1] - 2024-09-30
### Added
- terminal app to create project configuration (.toml) file
- reference in documentation
### Fixed
- changed parameters of main class to accept activation of terminal app
- new costs and TPM limits on on GoogleAI Gemini 1.5 pro and flash

## [0.5.0] - 2024-09-20
### Added
- full support for Cohere models
- check on consistency between selected supplier and models: both must be supported
- check on model input tokens limit, stops the execution if it exceeds the limit
### Fixed
- cleaned code structure of results and check packages
- updated documentation to include Cohere models and features

## [0.4.1] - 2024-08-25
### Added
- project parameter CoT justification
- automatic generation of CoT justification in OpenAI and Google AI models, as aditional prompt in same chat
- project parameter for duplicate runs (for debugging purposes)  
- implementation and testing of duplication algorithm
- documentation of these features
- examples of these features
### Fixed
- output in JSON array formatting
- cleaned code structure by creating debug package and moving log setup there

## [0.4.0] - 2024-08-16
### Added
- full support for Google AI models
- support for RPM limits
- documentation for these new features
### Changed
- documentation website formatting and structure

## [0.3.2] - 2024-08-05
### Added
- support of GPT 4 Omni Mini model

## [0.3.1] - 2024-06-18
### Added