@@ -116,6 +116,12 @@ func RunInteractiveConfigCreation() {
 		choose.WithHelp(true),)
 	CheckErr(err)
 
+	// Manuscript summary length
+	summaryLength, err := prompt.New().Ask("Enter the number of sentences to include in the summary for each manuscript (0 means no summary):").Input(
+		"0",
+		input.WithHelp(true), input.WithValidateFunc(validateNonNegative))
+	CheckErr(err)
+
 	// LLM provider selection with help
 	provider, err := prompt.New().Ask("Choose LLM provider:").
 		AdvancedChoose(
@@ -296,7 +302,7 @@ func RunInteractiveConfigCreation() {
 	config := generateTomlConfig(
 		projectName, author, version,
 		inputDir, inputConversion, resultsFileName, outputFormat, logLevel,
-		duplication, cotJustification, provider, apiKey, model, 
+		duplication, cotJustification, summaryLength, provider, apiKey, model, 
 		temperature, tpmLimit, rpmLimit, 
 		persona, task, expected_result,
 		failsafe, definitions, example, review,
@@ -424,7 +430,7 @@ func collectExamples(reviewItems []ReviewItem) string {
 
 // Helper function to generate the TOML configuration string
 func generateTomlConfig(projectName, author, version, inputDir, inputConversion, resultsFileName, outputFormat, 
-	logLevel, duplication, cotJustification, provider, apiKey, model, temperature, tpmLimit, rpmLimit, 
+	logLevel, duplication, cotJustification, summaryLength, provider, apiKey, model, temperature, tpmLimit, rpmLimit, 
 	persona, task, expected_result, failsafe, definitions, example, review string) string {
 	config := fmt.Sprintf(`
 [project]
@@ -440,6 +446,7 @@ output_format = "%s"
 log_level = "%s"
 duplication = "%s"
 cot_justification = "%s"
+summary_length = "%s"
 
 [project.llm]
 provider = "%s"
@@ -460,7 +467,7 @@ example = "%s"
 [review]
 %s
 `, projectName, author, version, inputDir, inputConversion, resultsFileName, outputFormat, 
-logLevel, duplication, cotJustification, provider, apiKey, model, temperature, tpmLimit, rpmLimit,
+logLevel, duplication, cotJustification, summaryLength, provider, apiKey, model, temperature, tpmLimit, rpmLimit,
 persona, task, expected_result, failsafe, definitions, example, review)
 	return strings.TrimSpace(config)
 }
