@@ -12,9 +12,10 @@ Security: For vulnerabilities.
 ## [0.5.2] - ongoing
 ### Added
 - input file conversion from pdf, docx, and html
+- generation of manuscript summaries
 ### Fixed
-- updated documentation to include input document conversion
-- updated terminal init function to include input document conversion
+- updated documentation to include input document conversion and number of sentences in summary
+- updated terminal init function to include input document conversion and number of sentences in summary
 
 ## [0.5.1] - 2024-09-30
 ### Added
